@@ -2,6 +2,8 @@
 v5.0-git
 --------
 
+[mms] Check for incorrect identity on compose if a single recipient address
+      is tied to a different identity than the sending identity.
 [mms] Use CATENATE (RFC 4469), if available, to strip MIME parts (Request
       #8092).
 [mms] Add preference to show flags created by other MUAs (Request #8882).
